<resources>
    <string name="app_name">马帮员工端</string>
    <string name="tv_main_title">马帮员工端</string>
    <string name="tv_changyongdizhi_title">常用地址</string>
    <string name="tv_changyongdizhi_jia">家：</string>
    <string name="tv_changyongdizhi_list_jia">常用地址</string>
    <string name="tv_changyongdizhi_gongsi">公司：</string>
    <string name="tv_changyongdizhi_list_gongsi">常用地址</string>
    <string name="tv_changyongdizhi_changyongdizhi">常用地址</string>
    <string name="tv_changyongdizhi_list_changyongdizhi_list">常用地址</string>
    <string name="btn_changyongdizhi_baocun">保存</string>
    <string name="tv_ditu_title">选择地址</string>
    <string name="tv_ditu_submit">保存</string>
    <string name="tv_main_shichang">在线时长</string>
    <string name="tv_dingdanxiangqing_title">订单详情</string>
    <string name="tv_dingdanxiangqing_dingdanhao">订单号　：</string>
    <string name="tv_dingdanxiangqing_xiadanshijian">下单时间：</string>
    <string name="tv_dingdanxiangqing_fuwucheliang">服务车辆：</string>
    <string name="tv_dingdanxiangqing_cheliangjibie">车辆级别：</string>
    <string name="tv_dingdanxiangqing_cheliangweizhi">车辆位置：</string>
    <string name="tv_dingdanxiangqing_lianxiren">联系人　：</string>
    <string name="tv_dingdanxiangqing_lianxiren_name">肖先生</string>
    <string name="tv_dingdanxiangqing_shoujihao">联系方式：</string>
    <string name="tv_dingdanxiangqing_fuwuxiangmu">服务项目：</string>
    <string name="tv_dingdanxiangqing_hejijine">合计金额：</string>
    <string name="tv_dingdanxiangqing_hejijine_zongjia">270</string>
    <string name="tv_dingdanxiangqing_xichegong_name">徐师傅</string>
    <string name="tv_qingjia_xichegong_name">徐师傅</string>
    <string name="tv_dingdanxiangqing_xichegong_gonghao">工　　号：</string>
    <string name="tv_pingjia_xichegong_gonghao">工　　号：</string>
    <string name="tv_dashang_xichegong_gonghao">工　　号：</string>
    <string name="tv_dingdanxiangqing_xichegong_gonghao_name">00000001</string>
    <string name="tv_pingjia_xichegong_gonghao_name">00000001</string>
    <string name="tv_dashang_xichegong_gonghao_name">00000001</string>
    <string name="tv_dingdanxiangqing_xichegong_lianxifangshi">联系方式：</string>
    <string name="tv_pingjia_xichegong_lianxifangshi">联系方式：</string>
    <string name="tv_dashang__xichegong_lianxifangshi">联系方式：</string>
    <string name="tv_main_shouyi">今日收益</string>
    <string name="tv_main_wodezuobiao">我的坐标：</string>
    <string name="tv_dingdan_listview_dingdanzhuangtai">已完成</string>
    <string name="tv_main_mydingdan">我的订单</string>
    <string name="tv_dingdanxiangqing_quxiao">取消订单</string>
    <string name="btn_main_jiedanshezhi">接单\n设置</string>
    <string name="tv_dingdanxiangqing_chepaihao">陕A27V96</string>
    <string name="btn_main_dangqianzhuangtai">下线中</string>
    <string name="phone">02987365853</string>
    <string name="btn_main_qiehuanzhuangtai">状态\n切换</string>
    <string name="tv_register">注册</string>
    <string name="tv_register_phone">请输入手机号</string>
    <string name="tv_register_code">请输入验证码</string>
    <string name="btn_register_code">获取验证码</string>
    <string name="btn_register_next">下一步</string>
    <string name="tv_login">登录</string>
    <string name="tv_touxiang">头像</string>
    <string name="tv_xingming">姓名</string>
    <string name="btn_mycar_bianji">编辑</string>
    <string name="tv_xingbie">性别</string>
    <string name="tv_lianxifangshi">联系方式</string>
    <string name="tv_register_login">已经有账号了?登录</string>
    <string name="tv_phone">手机号</string>
    <string name="tv_baocun">保存</string>
    <string name="tv_code">验证码</string>
    <string name="tv_pwd">设置密码</string>
    <string name="tv_surepwd">确认密码</string>
    <string name="tv_login_pwd">请输入密码</string>
    <string name="tv_login_phone">请输入手机号</string>
    <string name="btn_login_wangjimima">忘记密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_login_register">注册账号</string>
    <string name="tv_addpwd">设置密码</string>
    <string name="tv_addpwd_pwd">请输入密码</string>
    <string name="tv_addpwd_okpwd">请确认密码</string>
    <string name="tv_addpwd_zhuyi">密码长度必须大于等于6位，小于等于16位</string>
    <string name="tv_addpwd_submit">提交</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="tv_login_duanxin">短信登录</string>
    <string name="tv_login_mima">密码登录</string>
    <string name="tv_code_title">短信验证</string>
    <string name="drawer_open">打开侧滑</string>
    <string name="drawer_close">关闭侧滑</string>
    <string name="tv_cehua_huiyuan">会员</string>
    <string name="tv_cehua_yonghuming">用户名</string>
    <string name="tv_cehua_ziliao">我的资料</string>
    <string name="tv_cehua_qianbao">我的钱包</string>
    <string name="tv_cehua_yeji">我的业绩</string>
    <string name="tv_cehua_dingdan">我的订单</string>
    <string name="tv_cehua_shezhi">我的设置</string>
    <string name="tv_cehua_kefu">帮助</string>
    <string name="tv_mymoney_title">我的钱包</string>
    <string name="tv_mymoney_dingdanjiangjin">营业额(元)：</string>
    <string name="tv_mymoney_tixian">申请提现</string>
    <string name="rb_mymoney_zuotian">昨天</string>
    <string name="rb_mymoney_yixingqi">一星期</string>
    <string name="rb_mymoney_yigeyue">一个月</string>
    <string name="tv_mymoney_heji">合计金额(元)：</string>
    <string name="tv_work_title">赶往途中</string>
    <string name="tv_work_chepaihao">车牌号：</string>
    <string name="tv_work_dingdanhao">订单号：</string>
    <string name="tv_work_jutidizhi">具体地址：</string>
    <string name="tv_work_chepaihao_name">陕A84V96</string>
    <string name="tv_work_name">杨先生</string>
    <string name="tv_work_phone">18717309732</string>
    <string name="tv_work_dizhi">地址：</string>
    <string name="tv_work_dizhi_name">汉城壹号附近</string>
    <string name="tv_work_diyibu">1.如果您已到达目的地，请点击按钮“我已到达”</string>
    <string name="tv_work_diyibu_2">2.找到目标车辆，检查车辆外观状况并拍照</string>
    <string name="tv_work_dierbu">2.检查完成后，拍照并点击“开始服务”</string>
    <string name="tv_work_disanbu">3.洗车完成后请先拍照，并点击“服务完成”</string>
    <string name="tv_work_disibu">4.服务完成后，请选择您接下来的状态</string>
    <string name="btn_work_daoda">我已到达</string>
    <string name="btn_work_kaishifuwu">开始服务</string>
    <string name="btn_work_jianchawancheng">检查完成</string>
    <string name="btn_work_fuwuwancheng">服务完成</string>
    <string name="btn_work_jixugongzuo">继续工作</string>
    <string name="btn_work_quxiuxi">休息一会</string>
    <string name="tv_mydingdan_title">我的订单</string>
    <string name="rb_mydingdan_dengdaifuwu">等待服务</string>
    <string name="rb_mydingdan_zhengzaifuwu">正在服务</string>
    <string name="rb_mydingdan_yiwancheng">已完成</string>
    <string name="rb_mydingdan_yiquxiao">已取消</string>
    <string name="tv_mydingdan_listview_car">车牌号：</string>
    <string name="tv_mydingdan_listview_dingdanhao">订单号：</string>
    <string name="tv_mydingdan_listview_dizhi">地址：</string>
    <string name="tv_mydingdan_listview_shijian">时间：</string>
    <string name="tv_mydingdan_listview_xiangmu">项目：</string>
    <string name="tv_mydingdan_listview_heji">合计：</string>
    <string name="tv_main_shuaxin">刷新</string>
    <string name="btn_main_listview_kaishifuwu">开始服务</string>
    <string name="tv_myshezhi_xiugaimima">修改密码</string>
    <string name="tv_myshezhi_changyongdizhi">常用地址</string>
    <string name="tv_myshezhi_xiwanche">洗完车，给我打电话</string>
    <string name="tv_myshezhi_yuyintishi">语音提示</string>
    <string name="tv_myshezhi_changjianwenti">常见问题</string>
    <string name="tv_myshezhi_shiyongxuzhi">使用须知</string>
    <string name="tv_myshezhi_fuwutiaokuan">服务条款</string>
    <string name="tv_myshezhi_guanyuwomen">关于我们</string>
    <string name="tv_myshezhi_tuichudenglu">退出登录</string>
    <string name="tv_myshezhi_title">我的设置</string>
    <string name="tv_duanxinxiugai_title">短信修改密码</string>
    <string name="tv_duanxinxiugai_hint">请输入验证码</string>
    <string name="tv_duanxinxiugai_tishi">设置密码前请先完成验证,已发送验证码短信到</string>
    <string name="tv_duanxinxiugai_code">重新发送验证码</string>
    <string name="tv_duanxinxiugai_next">下一步</string>
    <string name="tv_yuanmimaxiugai_title">修改密码</string>
    <string name="et_yuanmimaxiugai_pwd">请输入原密码</string>
    <string name="et_yuanmimaxiugai_newpwd">请输入新密码</string>
    <string name="tv_shezhimima_title">设置密码</string>
    <string name="tv_shezhimima_tishi">设置成功后，下次可直接使用新密码登录账户</string>
    <string name="et_shezhimima_hint">6~16位数字与字母组合</string>
    <string name="tv_shezhimima_queding">确定</string>
    <string name="tv_myziliao_title">我的资料</string>
    <string name="tv_myziliao_jibenxinxi">基本信息</string>
    <string name="tv_myziliao_yinhangkaxinxi">银行卡信息(必须是本人持有的银行卡)</string>
    <string name="tv_myziliao_shenfenzhengxinxi">身份证信息</string>
    <string name="tv_myziliao_xingming">姓名：</string>
    <string name="tv_myziliao_bianji">编辑</string>
    <string name="tv_myziliao_xingbie">性别：</string>
    <string name="tv_myziliao_leibie">类别：</string>
    <string name="tv_myziliao_shoujihao">手机号：</string>
    <string name="tv_myziliao_shenfenzhenghao">身份证号：</string>
    <string name="tv_myziliao_kaihuhang">开户行：</string>
    <string name="tv_myziliao_kaihuhangdizhi">开户行地址：</string>
    <string name="tv_myziliao_yinhangkahao">银行卡号：</string>
    <string name="tv_myziliao_shenfenzhengzhengmian">身份证正面照片：</string>
    <string name="tv_myziliao_shenfenzhengfanmian">身份证反面照片：</string>
    <string name="tv_myziliao_shouchishenfenzheng">手持身份证照片：</string>
    <string name="tv_myziliao_tijiao">提交</string>
    <string name="tv_dingdanxiangqing_cheliangweizhi_weizhi">汉城壹号A区，小区正门口</string>
    <string name="btn_yindaoye3_title">立即体验</string>
    <string name="tv_dingdanxiangqing_shoujihao_name">18717309732</string>
    <string name="btn_dingdanxiangqing_zailaiyidan">开始服务</string>
    <string name="tv_content_gongsijieshao">公司简介</string>
    <string name="tv_content_fuwutiaokuan">马帮APP服务协议</string>
    <string name="tv_content_chongzhixieyi">充值协议</string>
    <string name="tv_content_chongzhixieyi_content">\u3000\u3000尊敬的客户，为保障您的合法权益，请您在点击“立即充值”按钮前，完整、仔细阅读本协议，当您点击“立即充值”按钮时，即视为您已同意并接受本协议的约定：\n
1、充值方式：支付宝、微信。\n
2、客户向马帮公司充值的金额会在客户“账户余额”中显示。\n
3、账户余额由充值金额、充值赠送金额（其他赠送或补偿金额）和充值前账户余额三部分组成。\n
4、系统不定期发布优惠活动，如充值前“账户余额”为100元，本次实际充值金额100元，送20元，则本次充值后的“账户余额”中增加“120元”金额，该“送20元”即为充值赠送金额，加上充值前“账户余额”100元，充值后的“账户余额”为“220元”。\n
5、客户结合自身情况自行决定充值次数及金额，没有次数及上限的限制；充值后的账户余额没有有效期的限制，直至消费清零为止；充值后的账户余额概不退还现金价值。\n
6、客户选择的订单消费金额直接从“账户余额”中抵扣，不足部分由客户及时充值支付。\n
7、充值赠送金额仅用作客户消费服务支出，不作抵扣违约金、赔偿金等之用。</string>
    <string name="tv_guanyuwomen_gongsi">公司介绍</string>
    <string name="tv_guanyuwomen_guanwang">官方网站</string>
    <string name="tv_guanyuwomen_youxiang">客服邮箱</string>
    <string name="tv_guanyuwomen_kefu">客服电话</string>
    <string name="tv_guanyuwomen_title">关于我们</string>
</resources>