<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_shezhimima_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back" />


        <Button
            android:id="@+id/btn_shezhimima_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/btn_mycar_bianji"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_shezhimima_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_shezhimima_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/tv_shezhimima_tishi"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/et_shezhimima_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:background="@drawable/btn_blue_bg"
        android:padding="10dp"
        android:hint="@string/et_shezhimima_hint"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/btn_shezhimima_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_gruee_bg"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:text="@string/tv_shezhimima_queding"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />


</LinearLayout>
