<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_duanxinxiugai_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back" />


        <TextView
            android:id="@+id/tv_duanxinxiugai_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_duanxinxiugai_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_duanxinxiugai_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/btn_mycar_bianji"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:visibility="invisible" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/tv_duanxinxiugai_tishi"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:id="@+id/tv_duanxinxiugai_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="187****9732"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >

        <EditText
            android:id="@+id/et_duanxinxiugai_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:background="@drawable/btn_blue_bg"
            android:padding="10dp"
            android:hint="@string/tv_duanxinxiugai_hint"
            android:inputType="number"
            />


        <Button
            android:id="@+id/btn_duanxinxiugai_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/btn_blue_bg"
            android:textColor="@color/titlebg"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_duanxinxiugai_code"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btn_duanxinxiugai_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_gruee_bg"
        android:text="@string/tv_duanxinxiugai_next"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />


</LinearLayout>
