<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_guanyuwomen_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back" />


        <TextView
            android:id="@+id/tv_guanyuwomen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_guanyuwomen_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_guanyuwomen_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/btn_mycar_bianji"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:visibility="invisible" />
    </RelativeLayout>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/appicon"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_guanyuwomen_gongsijieshao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#656565"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_guanyuwomen_gongsi"
                android:layout_marginBottom="8dp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/more"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#656565"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_guanyuwomen_guanwang"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#989898"
                android:text="www.mabangxiche.com"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#656565"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_guanyuwomen_youxiang"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#989898"
                android:text="mabangwangluo@163.com"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#656565"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_guanyuwomen_kefu"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:textColor="#989898"
                android:text="@string/phone"
                />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:text="马帮网络版权所有"/>

</LinearLayout>
